src/tui/app/snapshots/revu__tui__app__tests__palette_ghost.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 100, 20)"
---
╭ Queue · all ───────────────────╮╭ acme/widgets!42 · feat: charge cards at checkout ──────────────╮
│   TO REVIEW                  1 ││  omar · feat/checkout → main · 2h · +5 −3 · 2 files · ✓ succes │
│ ▎ !42 feat: charge cards at…   ││   1 of 2 approvals · 3 threads, 1 unresolved                   │
│   MINE                       1 ││  ◆ 1 on the MR  enter opens                                    │
│   !41 fix: flaky cache test  D ││                                                                │
│   WATCHING                   1 ││ ▎▾ src/pay/charge.rs                    +4 −2  ◆1 · 1 outdated │
│   !35 infra: new runner      ⠋ ││     ▾ @@ -12,4 +12,5 @@ pub async fn charge                    │
│   DONE ▸                     1 ││      12   12  pub async fn charge(card: &Card, amount: Money)… │
│                                ││  ✓   13      -    let client = Client::new();                  │
│                                ││           13 +    let client = Client::with_key(idempotency_k… │
│                                ││           14 +    let attempt = Attempt::first();              │
│                                ││      14   15      let response = client.charge(amount).await?; │
│                                ││      15   16      audit::record(&response);                    │
│                                ││     ▾ @@ -40,3 +41,4 @@ fn idempotency_key                     │
│                                ││      40   41  fn idempotency_key(card: &Card) -> Key {         │
│                                ││      41      -    Key::from(card.number())                     │
│                                ││           42 +    Key::from((card.number(), card.expiry()))    │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯
:pu blish  tab completes · enter runs · esc
 gitlab.com · nina · 1 unresolved                                                            ? help
