src/tui/app/snapshots/revu__tui__app__tests__pane_narrow.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 100, 20)"
---
╭ charge.rs:-13 · 1 thread ────────────────────────────────────────────────────────────────────────╮
│ ▎✓ resolved                                                                                      │
│ ▎you · 2h                                                                                        │
│ ▎Why drop the plain client?                                                                      │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
 gitlab.com · nina · 1 unresolved                                                            ? help
