src/tui/app/snapshots/revu__tui__app__tests__publish_modal.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 120, 24)"
---
╭ Queue · all ───────────────────╮╭ acme/widgets!42 · feat: charge cards at checkout ──────────────────────────────────╮
│   TO REVIEW                  1 ││  omar · feat/checkout → main · 2h · +5 −3 · 2 files · ✓ success                    │
│ ▎ !42 feat: charge cards at…   ││   1 of 2 approvals · 3 threads, 1 unresolved                                       │
│   MINE                       1 ││  ◆ 1 on the MR  enter opens                                                        │
│   !41 fix: flaky cache test  D ││                                                                                    │
│   WATCHING                   1 ││  ▾ src/pay/charge.rs                                     +4 −2  ◆1 ◇2 · 1 outdated │
│   !35 infra: new runner   ╭ Publish review ──────────────────────────────────────────────╮                           │
│   DONE ▸                  │                                                              │oney) -> Result<Receipt> { │
│                           │ 2 drafts on 1 file                                           │                           │
│                           │                                                              │ncy_key(card));            │
│                           │   charge.rs:12         nit                                   │                           │
│                           │ ▎ charge.rs:13         second one, a bit longer so the moda… │wait?;                     │
│                           │                                                              │                           │
│                           │ [x] approve  a to toggle                                     │                           │
│                           │                                                              │                           │
│                           │  enter publish · e edit · d delete · esc back                │                           │
│                           ╰──────────────────────────────────────────────────────────────╯)))                        │
│                                ││           43 +    // hunk two, line 43 is new                                      │
│                                ││      42   44  }                                                                    │
│                                ││                                                                                    │
│                                ││  ▸ Cargo.lock                                                        +1 −1  folded │
│                                ││                                                                                    │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 gitlab.com · nina · 1 unresolved · 2 drafts (1 unsaved) · P to publish                                          ? help
