src/tui/app/snapshots/revu__tui__app__tests__queue_compact.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 100, 16)"
---
╭ Queue · all ───────────────────╮╭ Review ────────────────────────────────────────────────────────╮
│   ── TO REVIEW · 1 ─────────── ││                                                                │
│ ▎ !42 feat: charge cards …     ││                                                                │
│                                ││                                                                │
│   ── MINE · 1 ──────────────── ││                                                                │
│   !41 fix: flaky cache te…   D ││                                                                │
│                                ││                      open a merge request                      │
│   ── WATCHING · 1 ──────────── ││                      to read its diff here                     │
│   !35 infra: new runner      ⠋ ││                                                                │
│                                ││                                                                │
│   ── ▸ DONE · 1 ────────────── ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯
 gitlab.com · nina                                                                           ? help
