src/tui/app/snapshots/revu__tui__app__tests__queue_drafts_grouped.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 120, 24)"
---
╭ Queue · acme/widgets · groupe… ╮╭ Review ────────────────────────────────────────────────────────────────────────────╮
│   ── TO REVIEW · 1 ─────────── ││                                                                                    │
│   feat charge cards at ch…     ││                                                                                    │
│   omar · !42 · +412 −38     2h ││                                                                                    │
│                                ││                                                                                    │
│   ── MINE · 1 ──────────────── ││                                                                                    │
│   fix flaky cache test       D ││                                                                                    │
│   nina · !41 · +3 −1        4h ││                                                                                    │
│                                ││                                                                                    │
│   ── WATCHING · 0 ──────────── ││                                                                                    │
│                                ││                                open a merge request                                │
│   ── OPEN · 1 ──────────────── ││                                to read its diff here                               │
│    lea · 1                     ││                                                                                    │
│   chore bump deps              ││                                                                                    │
│   lea · !51 · +412 −38      2h ││                                                                                    │
│                                ││                                                                                    │
│   ── DRAFTS · 1 ────────────── ││                                                                                    │
│    omar · 1                    ││                                                                                    │
│ ▎ feat refunds               D ││                                                                                    │
│ ▎ omar · !50 · +412 −38     2h ││                                                                                    │
│                                ││                                                                                    │
│   ── ▸ DONE · 1 ────────────── ││                                                                                    │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 gitlab.com · nina                                                                                               ? help
