src/tui/app/snapshots/revu__tui__app__tests__queue_failed.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 100, 14)"
---
╭ Queue · all ───────────────────╮╭ Review ────────────────────────────────────────────────────────╮
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                ✗               ││                                                                │
│                                ││                      open a merge request                      │
│     the queue did not load     ││                      to read its diff here                     │
│           r to retry           ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯
 gitlab.com · nina                                                                           ? help
