src/tui/app/snapshots/revu__tui__app__tests__queue_loaded.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 100, 16)"
---
╭ Queue · all ───────────────────╮╭ Review ────────────────────────────────────────────────────────╮
│   ── TO REVIEW · 1 ─────────── ││                                                                │
│ ▎ feat charge cards at chec…   ││                                                                │
│ ▎ omar · !42 · +412 −38     2h ││                                                                │
│                                ││                                                                │
│   ── MINE · 1 ──────────────── ││                                                                │
│   fix flaky cache test       ● ││                      open a merge request                      │
│   nina · !41 · +3 −1        4h ││                      to read its diff here                     │
│                                ││                                                                │
│   ── WATCHING · 1 ──────────── ││                                                                │
│   infra: new runner          ⠋ ││                                                                │
│   omar · !35 · +0 −0        2d ││                                                                │
│                                ││                                                                │
│   ── ▸ DONE · 1 ────────────── ││                                                                │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯
 gitlab.com · nina                                                                           ? help
