src/tui/app/snapshots/revu__tui__app__tests__queue_scoped.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 120, 20)"
---
╭ Queue · acme/widgets ──────────╮╭ Review ────────────────────────────────────────────────────────────────────────────╮
│   ── TO REVIEW · 1 ─────────── ││                                                                                    │
│ ▎ feat charge cards at ch…     ││                                                                                    │
│ ▎ omar · !42 · +412 −38     2h ││                                                                                    │
│                                ││                                                                                    │
│   ── MINE · 1 ──────────────── ││                                                                                    │
│   fix flaky cache test       D ││                                                                                    │
│   nina · !41 · +3 −1        4h ││                                                                                    │
│                                ││                                open a merge request                                │
│   ── WATCHING · 0 ──────────── ││                                to read its diff here                               │
│                                ││                                                                                    │
│   ── OPEN · 1 ──────────────── ││                                                                                    │
│   chore bump deps              ││                                                                                    │
│   lea · !51 · +412 −38      2h ││                                                                                    │
│                                ││                                                                                    │
│   ── ▸ DRAFTS · 1 ──────────── ││                                                                                    │
│                                ││                                                                                    │
│   ── ▸ DONE · 1 ────────────── ││                                                                                    │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 gitlab.com · nina                                                                                               ? help
